2015-06-18 Michele Pinamonti <michele.pinamonti@gmail.com>
        * All: Fix various warnings and printout reduced in case DEBUGLEVEL is set to 0
        * Svn-Tagging: 00-00-01
        
2015-06-15 Loic Valery <lvalery@cern.ch>
  	* Root/TtHFit.C: Adding the check of the histograms
	* Root/SampleHist.C: Adding post-smoothing check of the histograms

2015-06-12 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Root/TtHFit.C: table code fixed
        * Root/TtHFit.C, Root/FitResults.C: systematic pulls plot code moved to FitResults.C
        
2015-05-27 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Root/TtHFit.C, TtHFitter/TtHFit.h, util/myFit.C: CorrelationMatrix drawing command moved to myFit.C
        * Root/TtHFit.C: signal regions plot fixed (this time really)

2015-05-26 Loic Valery <lvalery@cern.ch>
        * CorrelationMatrix.C: implement duumping of correlation matrix in Plots/ folder

2015-05-25 Loic Valery <lvalery@cern.ch>
        * myFit.C: fixing the order of commands (smoothing done before writing the histos in the file)
        * Region.C: fix on the central values (consistent with Roostats) -- still work to do on the systematics
        * Common.C/.h: moving the variable for dumping systematic control plots in Common

2015-05-22 Michele Pinamonti <michele.pinamonti@gmail.com>
        * general: cahnged organization of the output: now all the files created by a fit are inside a single directory, with a sub-directory structure
        * TtHFit.C: re-introduced SmoothSystematics
        * TtHFit.C, myFit.C: smoothing and syst-plots commands moved to myFit.C (option for saving syst-plots moved as well)
        * tableToLatex.sh: example script added to turn txt tables into latex format
        * TtHFit.C: Fixed signal-regions plot

2015-05-20 Loic Valery <lvalery@cern.ch>
        * TtHFit.C: fix mem leaks, remove unused function (SmoothSystematics), change some histograms names to avoid warning messages