@@ -3,8 +3,8 @@ Fit: "FitExample"
   POI: "SigXsecOverSM"
   ReadFrom: HIST
   HistoPath: "ExampleInputs"
-%   FitType: CONTROLSIGNAL
-  FitType: CONTROL
+  FitType: CONTROLSIGNAL
+%  FitType: CONTROL
   DebugLevel: 0
   SystControlPlots: TRUE
 
