@@ -1,3 +1,7 @@
+2015-06-23 Loic Valery <lvalery@cern.ch>
+        * Changing HistoChecks and preceeds it by corrections for null bins and weird systematics
+        * Fix text color problems in HistoChecks
+
 2015-06-18 Michele Pinamonti <michele.pinamonti@gmail.com>
         * All: Fix various warnings and printout reduced in case DEBUGLEVEL is set to 0
         * Svn-Tagging: 00-00-01
